@@ -7,6 +7,7 @@ x.x:
 - fixed: deprecated notices in combination with widget_manager
 - fixed: pagination in group members widget
 - changed: sending of group invite e-mails to be more generic
+- changed: restored limited functionality of group activity river
 
 2.1 (2012-04-16):
 
